--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet.locatecontrol": "^0.81.1",
+    "maplibre-gl": "^4.7.1",
     "osm-community-index": "^5.8.1"
   },
   "devDependencies": {
