--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
     "app/static/js/bundle-*": true,
     "build/": true,
     "dist/": true,
-    "node_modules/": true
+    // "node_modules/": true
   },
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
